--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -117,7 +117,7 @@
         android:layout_marginEnd="178dp"
         android:layout_marginRight="178dp"
         android:layout_marginBottom="21dp"
-        android:text="Or"
+        android:text="@string/or"
         android:textColor="@color/colorBlack"
         android:textSize="20sp"
         android:textStyle="bold"
