--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/background_image"
         android:scaleType="centerCrop"
-        android:src="@drawable/background" />
+        android:src="@drawable/background"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,6 +27,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="180dp"
+                android:layout_marginRight="25dp"
+                android:layout_marginLeft="25dp"
+                android:layout_marginBottom="180dp"
                 android:fontFamily="sans-serif-black"
                 android:textAllCaps="true"
                 android:text="Welcome to Ailses"
@@ -45,29 +47,27 @@
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="30dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
-            android:Orientation="vertical">
+            android:layout_marginRight="40dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layoutWeight="2">
+                android:layout_weight="2">
 
                 <Button
                     android:id="@+id/Tutorial"
                     android:layout_width="150dp"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginBottom="5dp"
-                    android:background="@drawable/element_outline"
                     android:layout_weight="1"
+                    android:background="@drawable/element_outline"
                     android:text="Tutorial"
-                    android:onClick="TutorialPressed"
-                    android:textStyle="bold"
                     android:textColor="@color/colorBlack"
-                    android:textSize="12dp"/>
+                    android:textSize="12dp"
+                    android:textStyle="bold" />
                 <Button
                     android:id="@+id/getStarted"
                     android:layout_width="150dp"
@@ -78,10 +78,10 @@
                     android:background="@drawable/element_outline"
                     android:layout_weight="1"
                     android:text="Get Started"
-                    android:onClick="GetstartedPressed"
                     android:textStyle="bold"
                     android:textColor="@color/colorBlack"
                     android:textSize="12dp"/>
+
 
             </LinearLayout>
         </LinearLayout>
