--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -41,8 +41,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/descripTv"
-            android:text="Description"
+            android:id="@+id/priceTv"
+            android:text="Price"
             android:textSize="16dp"
             android:textColor="#a9a9a9"
             android:layout_toRightOf="@+id/imageIv"
