--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
+
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="3dp"
-    app:cardElevation="3dp"
-    app:cardUseCompatPadding="true"
-    >
-
+    android:layout_margin="4dp">
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="407dp"
@@ -16,44 +13,42 @@
         android:scaleType="centerCrop"
         android:src="@drawable/background" />
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_width="117dp"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:padding="16dp">
+        android:orientation="horizontal">
 
-        <ImageView
-             android:layout_width="75dp"
-             android:layout_height="75dp"
-             android:id="@+id/imageIv"
-             android:src="@mipmap/ic_launcher"/>
 
-         <TextView
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:id="@+id/titleTv"
-              android:text="Title"
-              android:textSize="22sp"
-              android:textColor="#000"
-              android:textStyle="bold"
-              android:layout_toRightOf="@+id/imageIv"
-              android:layout_marginLeft="10dp"
-               android:layout_marginStart="10dp" />
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/priceTv"
-            android:text="Price"
-            android:textSize="16dp"
-            android:textColor="#a9a9a9"
-            android:layout_toRightOf="@+id/imageIv"
-            android:layout_toEndOf="@+id/imageIv"
-            android:layout_marginLeft="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_below="@+id/titleTv"/>
+            android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:orientation="vertical">
 
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Name" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="price" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="store" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="store" />
 
 
+        </LinearLayout>
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
