--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,28 +18,25 @@
         android:layout_height="match_parent">
 
 
-        <LinearLayout
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="160dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginBottom="180dp"
+                android:layout_centerInParent="true"
                 android:fontFamily="sans-serif-black"
-                android:textAllCaps="true"
                 android:text="Welcome to Ailses"
                 android:textAlignment="center"
+                android:textAllCaps="true"
                 android:textColor="@color/colorBlack"
                 android:textSize="50sp"
-                android:textStyle="bold">
+                android:textStyle="bold"/>
 
-            </TextView>
-        </LinearLayout>
+
+    </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
